--- a/.html
+++ b/.html
@@ -1,8 +1,20 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h2>Heading 2</h2>
-<p>Hello World!</p>
+<div>
+    <img src="https://www.ucsd.edu/_resources/img/logo_UCSD.png"> 
+    <a href="#S1">Section 1</a> <a href="#S2">Section 2</a>
+</div>
+
+<div>
+    <h2 id="S1">Section 1</h2>
+    <img src="https://brand.ucsd.edu/_images/logos-and-brand-elements/additional-campus-logos/ucsd-athletics-logo.svg">
+</div>
+<div>
+    <h2 id="S2">Section 2</h2>
+    <img src="https://brand.ucsd.edu/_images/logos/logos-college-logos-07-23.svg">
+</div>
+
 
 </body>
 </html>
